# mcp-web-browser

./: README.md  changelog.md  pyproject.toml
src/mcp_web_browser/: server.py
