[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-web-browser"
version = "0.1.0"
description = "MCP Web Browser Server using Playwright"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]",
    "playwright",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_web_browser"]

[tool.hatch.envs.default]
dependencies = [
    "pytest",
    "ruff",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "ASYNC"]
ignore = ["E501"]

[project.scripts]
mcp-web-browser = "mcp_web_browser.server:main"
